Modified build instructions to remove master instructions.